# pipeit

./: .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  LICENSE  README.md  a.out
.github/workflows/: bench-nightly.yml  ci.yml
benches/: BENCHMARK_LIBRARY_SELECTION_AND_MIGRATION_PLAN.md  README.md  actor_bench.cpp  affinity_bench.cpp  canonicalize_results.sh  commit_characterize.sh  compare_canonical_results.sh  compiler_bench.rs  compiler_bench_stable.sh  e2e_bench.cpp  json_report.sh  latency_bench.cpp  memory_bench.cpp  pdl_bench.sh  profile_ab.sh  profile_bench.sh  profiling_protocol.md  ringbuf_bench.cpp  run_all.sh  runtime_bench.cpp  shm_bench.cpp  thread_bench.cpp  timer_bench.cpp  validate_canonical_results.sh
benches/pdl/: audio_chain.pdl  complex.pdl  modal.pdl  multitask.pdl  sdr_receiver.pdl  sensor_fusion.pdl  simple.pdl
benches/perf/: perf_actor.sh  perf_affinity.sh  perf_common.sh  perf_contention.sh  perf_flamegraph.sh  perf_memory.sh  perf_numa.sh  perf_profile.sh  perf_ringbuf.sh
benches/schema/: canonical-benchmark.schema.json
compiler/: Cargo.toml  a.out
compiler/benches/: compiler_bench.rs
compiler/src/: analyze.rs  ast.rs  codegen.rs  diag.rs  dim_resolve.rs  dot.rs  graph.rs  hir.rs  id.rs  lexer.rs  lib.rs  lir.rs  lower.rs  main.rs  parser.rs  pass.rs  pipeline.rs  program_query.rs  registry.rs  resolve.rs  schedule.rs  spawn.rs  subgraph_index.rs  thir.rs  timing.rs  type_infer.rs
compiler/tests/: codegen_compile.rs  compiler-tests.rs  integration_pipeline.rs  pipeline_equivalence.rs  property_tests.proptest-regressions  property_tests.rs  reproducibility.rs  runtime_actors.rs  snapshot_codegen.rs  snapshot_hir.rs  snapshot_lir.rs  snapshot_thir.rs  verify_regression.rs
compiler/tests/data/: generate.py  golden_stdlib_manifest.json
compiler/tests/snapshots/: snapshot_codegen__complex_pdl.snap  snapshot_codegen__example_pdl.snap  snapshot_codegen__feedback_pdl.snap  snapshot_codegen__gain_pdl.snap  snapshot_codegen__multirate_pdl.snap  snapshot_codegen__receiver_pdl.snap  snapshot_codegen__socket_stream_pdl.snap  snapshot_hir__hir_bind_basic.snap  snapshot_hir__hir_complex_pdl.snap  snapshot_hir__hir_example_pdl.snap  snapshot_hir__hir_feedback_pdl.snap  snapshot_hir__hir_gain_pdl.snap  snapshot_hir__hir_multirate_pdl.snap  snapshot_hir__hir_receiver_pdl.snap  snapshot_hir__hir_socket_stream_pdl.snap  snapshot_lir__lir_bind_basic.snap  snapshot_lir__lir_bind_ident_arg.snap  snapshot_lir__lir_bind_in.snap  snapshot_lir__lir_bind_interface_manifest.snap  snapshot_lir__lir_complex_pdl.snap  snapshot_lir__lir_example_pdl.snap  snapshot_lir__lir_feedback_pdl.snap  snapshot_lir__lir_gain_pdl.snap  snapshot_lir__lir_multirate_pdl.snap  snapshot_lir__lir_receiver_pdl.snap  snapshot_lir__lir_socket_stream_pdl.snap  snapshot_thir__thir_complex_pdl.snap  snapshot_thir__thir_example_pdl.snap  snapshot_thir__thir_feedback_pdl.snap  snapshot_thir__thir_gain_pdl.snap  snapshot_thir__thir_multirate_pdl.snap  snapshot_thir__thir_receiver_pdl.snap  snapshot_thir__thir_socket_stream_pdl.snap
doc/: PROFILING_NOTES_v0.3.3.md  TODO.md  pcc-usage-guide.md  performance-analysis-report.md
doc/adr/: 001-rust-for-pcc.md  002-logos-for-lexer.md  003-chumsky-parser.md  004-text-scanner-for-actors.md  005-tap-input-for-feedback.md  006-shared-buffer-multi-reader-ring.md  007-shape-inference-v020.md  008-rate-domain-fusion-spec-v020.md  009-timer-overhead-reduction.md  010-ringbuf-contention-reduction.md  011-actor-runtime-context-timing-api.md  012-benchmark-suite-kpi-consolidation.md  013-ppkt-protocol-socket-actors.md  014-adaptive-spin-defaults.md  015-polymorphism-and-safe-widening.md  015-v020-spec-implementation-alignment.md  016-polymorphism-and-safe-widening.md  017-analysis-owned-port-rate-resolution.md  018-intra-task-passthrough-loop-fusion.md  019-same-rep-chain-loop-fusion-foundation.md  020-pass-manager-artifact-model-and-invalidation.md  021-stable-semantic-ids-over-span-keys.md  022-unified-diagnostics-model-with-cause-chain.md  023-v040-backward-compatibility-gate.md  024-thir-first-ir-unification.md  025-lir-backend-ir.md  026-runtime-shell-library.md  027-registry-determinism-hermetic-inputs.md  028-edge-memory-classification.md  029-spsc-ring-buffer-specialization.md  030-param-sync-simplification.md  031-clang-default-cxx-backend.md  032-pp-record-manifest-extraction.md  033-manifest-required-inputs.md  034-pshm-lock-free-atomics-gcc-builtins.md  035-relaxed-stable-id-hash-cross-process-shm.md  036-ringbuf-wait-loop-policy.md
doc/performance/: 20260222T092114-7248b44-bench.md  20260223T084733-e758c03-bench.md  20260224T224105-346857e-bench.md  20260224T230920-701190c-bench.md  20260224T231616-ecf7d6d-bench.md  20260225T003937-ef79417-bench.md  20260225T083018-bec9c67-bench.md  20260225T083407-f49a86a-bench.md  20260225T221120-4830d41-bench.md  20260225T221347-c1753dc-bench.md  20260225T221758-a03356c-bench.md  20260228T080903-585f144-bench.md  20260228T092042-124ab2d-bench.md  20260228T092348-1da4cca-bench.md  20260228T092739-c751f7e-bench.md  20260228T093036-3807e26-bench.md  20260228T163606-59a0616-bench.md  20260228T164035-98a1798-bench.md  20260228T164715-443afb7-bench.md  20260228T165755-1085deb-bench.md  (+33 more)
examples/: CMakeLists.txt  actors.h  bind.pdl  build.sh  complex.pdl  example.pdl  example_actors.h  feedback.pdl  gain.pdl  multichannel.pdl  multirate.pdl  poly_actors.h  receiver.pdl  shm_scope.pdl  socket_stream.pdl  test_cmake_regen.sh
examples/shm/: README.md  reader.pdl  run.sh  shm_actors.h  writer.pdl
runtime/: .gitignore
runtime/tests/: CMakeLists.txt  README.md  test_arithmetic.cpp  test_bind_io.cpp  test_fft.cpp  test_net.cpp  test_ringbuf.cpp  test_shell.cpp  test_socket_actors.cpp  test_statistics.cpp  test_timer.cpp  test_transform.cpp  test_utility.cpp  test_waveform.cpp
scripts/: gen-stdlib-doc.py
tools/pipscope/: CMakeLists.txt  README.md  cli.h  decimate.h  main.cpp  ppkt_receiver.h  shm_receiver.h  trigger.h  types.h
tools/pipscope/tests/: test_receiver.cpp  test_shm_receiver.cpp
(+32 files in other folders)
