[package]
name = "pcc"
version = "0.1.0"
edition = "2021"
description = "Pipit Compiler Collection — compiles .pdl pipeline definitions to native executables"

[[bin]]
name = "pcc"
path = "src/main.rs"

[lib]
name = "pcc"
path = "src/lib.rs"

[dependencies]
chumsky = "0.10"
clap = { version = "4", features = ["derive"] }
logos = "0.15"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "compiler_bench"
harness = false
